# big-raster

./: .gitignore  CMakeLists.txt  Makefile  cmake_install.cmake  readme.txt
GLAD/include/glad/: glad.h
glfw-3.4/: Makefile  cmake_install.cmake  cmake_uninstall.cmake
glfw-3.4/docs/: Makefile  cmake_install.cmake
glfw-3.4/src/: Makefile  cmake_install.cmake
src/: glad.c  main.cpp  notes.txt
src/shaders/: fragment.glsl  vertex.glsl  yellow.glsl
